--- a/customresource.template.yml
+++ b/customresource.template.yml
@@ -33,12 +33,18 @@ Resources:
         - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
 
 Outputs:
-  Arn:
+  ServiceToken:
     Value: !GetAtt CustomResource.Arn
+    Exports:
+      Name: !Sub ${AWS::StackName}:ServiceToken
   Role:
     Value: !Ref CustomResourceRole
+    Exports:
+      Name: !Sub ${AWS::StackName}:Role
   RoleArn:
     Value: !GetAtt CustomResourceRole.Arn
+    Exports:
+      Name: !Sub ${AWS::StackName}:RoleArn
   TemplateName:
     Value: TEMPLATE_NAME_REPLACE
   TemplateVersion:
