test stack as nested stack in test tempate

--- a/tests/test.template.yml
+++ b/tests/test.template.yml
@@ -6,3 +6,8 @@ Resources:
       TemplateURL: customresource.template.json
       Parameters:
         LambdaTimeout: 300
+
+  CustomResourceStackTest:
+    Type: "AWS::CloudFormation::Stack"
+    Properties:
+      TemplateURL: examples.template.json
