--- a/customresource.template.yml
+++ b/customresource.template.yml
@@ -12,7 +12,7 @@ Resources:
       Role: !GetAtt CustomResourceRole.Arn
       Code:
         ZipFile: !Include { type: string, location: lambda.js }
-      Runtime: nodejs6.10
+      Runtime: nodejs10.x
       Timeout: !Ref LambdaTimeout
   CustomResourceLogGroup:
     Type: AWS::Logs::LogGroup
